--- a/index/descriptions/ἀρχή.md
+++ b/index/descriptions/ἀρχή.md
@@ -1,1 +1,1 @@
-> Die Griechen hören aus diesem Wort meist ein Doppelts heraus: ἀρχή meint einmal das, von woher etwas seinen Ausgang und Anfang nimmt; zum anderen aber das, was zugleich _als_ dieser Ausgang und Anfang _über_ das Andere, was von ihm ausgeht, weggreift und so es einbehält und damit beherrscht. Ἀρχή bedeutet zumal Anfang und Herrschaft. (WBPh, 245)
+> Die Griechen hören aus diesem Wort meist ein Doppelts heraus: ἀρχή meint einmal das, von woher etwas seinen Ausgang und Anfang nimmt; zum anderen aber das, was zugleich _als_ dieser Ausgang und Anfang _über_ das Andere, was von ihm ausgeht, weggreift und so es einbehält und damit beherrscht. Ἀρχή bedeutet zumal Anfang und Herrschaft In einder rangmäßig niedrigeren Erweiterung sagt dies: Ausgang und Verfügung; um die hin- und zurückschwingende Einheit beider auszudrücken, läßt sich ἀρχή übersetzen durch ausgängliche Verfügung und verfügenden Ausgang. Die Einheit dieses Zweifachen ist *wesentlich*. (WBPh, 245)
