--- a/index/descriptions/τόπος.md
+++ b/index/descriptions/τόπος.md
@@ -1,3 +1,1 @@
-> Τόπος ist das ποῦ, das Wo und Dort der Hingehörigkeit eines bestimmten Körpers; Feuriger gehört nach oben, Erdigers nach unten. (*VWBPh* p. 246)
-
- 
+> Τόπος ist das ποῦ, das Wo und Dort der Hingehörigkeit eines bestimmten Körpers; Feuriger gehört nach oben, Erdigers nach unten. (_VWBPh_, p. 246)
