--- a/index/descriptions/σúμβολον.md
+++ b/index/descriptions/σúμβολον.md
@@ -1,1 +1,1 @@
-> Wir müssen uns hüten, σúμβολον durch Symbol zu übersetzen und einen Begriff von Symbol, der heute umläuft, für σúμβολον einzusetzen. συμβολή bedeutet Zusammenwurf des einen mit dem anderen, Zusammenhalten von etwas mit einem anderen, d. h. Aneinanderhalten, An- und Ineinanderfügen. Daher bedeutet σúμβολον soviel wie die Fuge, die Naht, das Gelenk, wo das eine mit dem anderen nicht einfach nur zusammengebracht, sondern aneinandergehalten is, so das es einander paßt. σúμβολον ist das, was zusammengehalten, zueinander paßt, dabei als zueinandergehörig sich erweist. (*GA 29/30* p. 445)
+> Wir müssen uns hüten, σύμβολον durch Symbol zu übersetzen und einen Begriff von Symbol, der heute umläuft, für σύμβολον einzusetzen. συμβολή bedeutet Zusammenwurf des einen mit dem anderen, Zusammenhalten von etwas mit einem anderen, d. h. Aneinanderhalten, An- und Ineinanderfügen. Daher bedeutet σύμβολον soviel wie die Fuge, die Naht, das Gelenk, wo das eine mit dem anderen nicht einfach nur zusammengebracht, sondern aneinandergehalten is, so das es einander paßt. σύμβολον ist das, was zusammengehalten, zueinander paßt, dabei als zueinandergehörig sich erweist. (*GA 29/30* p. 445)
