Adjust some styling & add links

--- a/index/descriptions/μορφή.md
+++ b/index/descriptions/μορφή.md
@@ -1,5 +1,5 @@
-> wie Aristoteles die μορφή denkt, sagt er zum Glück selbst in dem Satz, der diesen für seine φύσις-Auslegung entscheidenden Begriff einführt: ἡ μορφὴ καὶ τὸ εἶδος τὸ κατὰ τὸν λόγον [Aristoteles, *Fysica*, 193 a 31]: 'die μορφή, und das wil sagen τὸ εἶδος, das gemäß dem λόγος'. Die μορφή muß vom εἶδος her und dieses in Beziehung auf den λόγος verstanden werden. 
+> wie Aristoteles die μορφή denkt, sagt er zum Glück selbst in dem Satz, der diesen für seine φύσις-Auslegung entscheidenden Begriff einführt: ἡ μορφὴ καὶ τὸ εἶδος τὸ κατὰ τὸν λόγον [Aristoteles, *Fysica*, 193 a 31]: 'die μορφή, und das wil sagen τὸ [[εἶδος]], das gemäß dem [[λόγος]]'. Die μορφή muß vom εἶδος her und dieses in Beziehung auf den λόγος verstanden werden.
 >
 > [...]
 >
-> Mit dieser Übersetzung von μορφή, Gestellung in das Aussehen, soll zunächst ein Doppeltes und im griechischen Sinne Gleichwesentliches ausgesprochen werden, was im Namen 'Form' durchaus fehlt: einmal Gestellung in das Aussehen als Wiese der Anwesung, οὐσία: μορφή nicht eine am Stoff vorhandene, *seiende* Eigenschaft, sondern eine Weise des *Seins*; zum anderen 'Gestellung in das Aussehen' als Bewegtheit, κίνησις welches 'Moment' erst recht im Formbegriff ausbleibt. (*WBPh*, p. 273f.)
+> Mit dieser Übersetzung von μορφή, Gestellung in das Aussehen, soll zunächst ein Doppeltes und im griechischen Sinne Gleichwesentliches ausgesprochen werden, was im Namen 'Form' durchaus fehlt: einmal Gestellung in das Aussehen als Wiese der Anwesung, [[οὐσία]]: μορφή nicht eine am Stoff vorhandene, _seiende_ Eigenschaft, sondern eine Weise des _Seins_; zum anderen 'Gestellung in das Aussehen' als Bewegtheit, [[κίνησις]] welches 'Moment' erst recht im Formbegriff ausbleibt. (_WBPh_, p. 273f.)
