--- a/index/descriptions/φύσις.md
+++ b/index/descriptions/φύσις.md
@@ -1,1 +1,1 @@
-> Φύσις ist οὐσία, d.h. Seiendheit – Jenes, was das Seiende als ein solches auszeichnet, eben das Sein. (*WBPh*, p. 258)
+> Φύσις ist [[οὐσία]], d.h. Seiendheit – Jenes, was das Seiende als ein solches auszeichnet, eben das Sein. (_WBPh_, p. 258)
