--- a/index/descriptions/φύσις.md
+++ b/index/descriptions/φύσις.md
@@ -1,1 +1,3 @@
 > Φύσις ist [[οὐσία]], d.h. Seiendheit – Jenes, was das Seiende als ein solches auszeichnet, eben das Sein. (_WBPh_, p. 258)
+
+> Was sagt nun das Wort φύσις? Es sagt das von sich aus Aufgehende (z. B. das Aufgehen einer Rose), das sich eröffenende Entfalten, das in solcher Entfaltung in die Erscheinung-Treten und in ihr sich Halten und Verbleiben, kurz, das aufgehend-verweilende Walten. (*EM*, p. 16)
