Add link to work references in descriptions

--- a/index/descriptions/κατηγορία.md
+++ b/index/descriptions/κατηγορία.md
@@ -1,1 +1,1 @@
-> Κατηγορία übersetzen wir mit Ansprechung und fassen freilich auch so nicht die volle griechische Bedeutung: κατὰ‐ἀγορεύειν, auf der ἀγορά in der öffentlichen Gerichtsverhandlung einem auf den Kopf zu sagen, daß er 'derjenige' ist, der ...; daraus ergibt sich die weitere Bedeutung: etwas als das und das ansprechen, so zwar, das im Ansprechen und durch dieses das Angesprochene ins Öffentliche und Offene, Offenbare gestellt wird. Κατηγορία ist die Nennung dessen, was etwas ist: Haus, Baum, Himmel, Meer, hart, rot, gesund. (*WBPh*, p. 250)
+> Κατηγορία übersetzen wir mit Ansprechung und fassen freilich auch so nicht die volle griechische Bedeutung: κατὰ‐ἀγορεύειν, auf der ἀγορά in der öffentlichen Gerichtsverhandlung einem auf den Kopf zu sagen, daß er 'derjenige' ist, der ...; daraus ergibt sich die weitere Bedeutung: etwas als das und das ansprechen, so zwar, das im Ansprechen und durch dieses das Angesprochene ins Öffentliche und Offene, Offenbare gestellt wird. Κατηγορία ist die Nennung dessen, was etwas ist: Haus, Baum, Himmel, Meer, hart, rot, gesund. [@WBPh, p. 250]
