--- a/index/descriptions/μορφή.md
+++ b/index/descriptions/μορφή.md
@@ -2,4 +2,4 @@
 >
 > [...]
 >
-> Mit dieser Übersetzung von μορφή, Gestellung in das Aussehen, soll zunächst ein Doppeltes und im griechischen Sinne Gleichwesentliches ausgesprochen werden, was im Namen 'Form' durchaus fehlt: einmal Gestellung in das Aussehen als Wiese der Anwesung, [[οὐσία]]: μορφή nicht eine am Stoff vorhandene, _seiende_ Eigenschaft, sondern eine Weise des _Seins_; zum anderen 'Gestellung in das Aussehen' als Bewegtheit, [[κίνησις]] welches 'Moment' erst recht im Formbegriff ausbleibt. (_WBPh_, p. 273f.)
+> Mit dieser Übersetzung von μορφή, Gestellung in das Aussehen, soll zunächst ein Doppeltes und im griechischen Sinne Gleichwesentliches ausgesprochen werden, was im Namen 'Form' durchaus fehlt: einmal Gestellung in das Aussehen als Wiese der Anwesung, [[οὐσία]]: μορφή nicht eine am Stoff vorhandene, _seiende_ Eigenschaft, sondern eine Weise des _Seins_; zum anderen 'Gestellung in das Aussehen' als Bewegtheit, [[κίνησις]] welches 'Moment' erst recht im Formbegriff ausbleibt. [@WBPh, p. 273f.]
