--- a/index/descriptions/ἀληθέα.md
+++ b/index/descriptions/ἀληθέα.md
@@ -1,1 +1,1 @@
-> […] ἀληθέα, das Unverborgene. Wir übersetzen gewöhnlich dieses Wort mit unserem blassen ausdruck 'das Wahre'. (GA 29/30, p. 42)
+> […] ἀληθέα, das Unverborgene. Wir übersetzen gewöhnlich dieses Wort mit unserem blassen ausdruck 'das Wahre'. [@GA 29/30, p. 42]
