--- a/index/descriptions/ἐντελέχεια.md
+++ b/index/descriptions/ἐντελέχεια.md
@@ -1,5 +1,5 @@
 ἐντελέχεια komt van ἐν (in), τέλος (doel) en ἔχεια (ἔχειν, hebben): 'ingeschapen streving naar een doel'<!--[^1]--> [[Bron](https://www.etymologiebank.nl/trefwoord/entelechie)]. Heidegger:
 
-> Der von [[A\[ristoteles\]|Aristoteles]] selbst geprägte Name ist das Grundwort seines Denkens, und es enthält jenes Wissen vom Sein, in dem sich die griechische Philosophie vollendet. Die 'ἐντελέχεια' umschließt jenen Grundbegriff der abendländischen [[Metaphysik]], an dessen Umdeutung am schärfsten die Entfernung der nachkommenden Metaphysik vom anfänglichen griechischen Denken abgeschätzt werden kann, ja eingesehen werden muß. (_WBPh_, 280f.)
+> Der von [[A\[ristoteles\]|Aristoteles]] selbst geprägte Name ist das Grundwort seines Denkens, und es enthält jenes Wissen vom Sein, in dem sich die griechische Philosophie vollendet. Die 'ἐντελέχεια' umschließt jenen Grundbegriff der abendländischen [[Metaphysik]], an dessen Umdeutung am schärfsten die Entfernung der nachkommenden Metaphysik vom anfänglichen griechischen Denken abgeschätzt werden kann, ja eingesehen werden muß. [@WBPh, 280f.]
 
 <!-- (We need to figure out footnote display first...) [^1]: **entelechie** [ingeschapen streving naar een doel] {1847} < **latijn** *entelechia* < **grieks** *entelecheia* [beweging die de materie tot werkelijkheid verheft], gevormd door Aristoteles van *entelès* [volwassen, voortreffelijk, volledig] (van *en* [in] + *telos* [einde, volmaaktheid]) + *echein* [hebben]. [Bron](https://www.etymologiebank.nl/trefwoord/entelechie). -->
