--- a/index/descriptions/ἔγκλισις.md
+++ b/index/descriptions/ἔγκλισις.md
@@ -1,1 +1,1 @@
-> Die Abwandlung [...] des [[Verbum]] heißt ἔγκλισις (declinatio). (_EM_, p. 63)
+> Die Abwandlung [...] des [[Verbum]] heißt ἔγκλισις (declinatio). [@EM, p. 63]
