--- a/index/descriptions/ὕλη.md
+++ b/index/descriptions/ὕλη.md
@@ -1,1 +1,1 @@
-> Ὕλη meint in der gewöhnlichen Bedeutung 'Wald', 'Gehölz', das 'Holz', in dem der Jäger jagt; aber zugleich das 'Holz', das Holz als Baustoff liefert; von hier wird ὕλη zum Stoff für jede Art von Bauen und 'Herstellen' überhaupt. Damit wäre dann durch den gern geübten Rückgang auf die 'ursprüngliche' Wortbedeutung gerade erwiesen, daß ὕλη soviel wie 'Stoff' besagt. (_WBPh_, p. 272)
+> Ὕλη meint in der gewöhnlichen Bedeutung 'Wald', 'Gehölz', das 'Holz', in dem der Jäger jagt; aber zugleich das 'Holz', das Holz als Baustoff liefert; von hier wird ὕλη zum Stoff für jede Art von Bauen und 'Herstellen' überhaupt. Damit wäre dann durch den gern geübten Rückgang auf die 'ursprüngliche' Wortbedeutung gerade erwiesen, daß ὕλη soviel wie 'Stoff' besagt. [@WBPh, p. 272]
