--- a/index/descriptions/πτῶσις.md
+++ b/index/descriptions/πτῶσις.md
@@ -1,1 +1,1 @@
-> Die Abwandlung des [[Nomen]] heißt πτῶσις (casus). (_EM_, p. 63)
+> Die Abwandlung des [[Nomen]] heißt πτῶσις (casus). [@EM, p. 63
