--- a/locales/nl/LC_MESSAGES/django.po
+++ b/locales/nl/LC_MESSAGES/django.po
@@ -3,16 +3,15 @@
 # This file is distributed under the MIT license.
 # André van Delft <andrevandelft@outlook.com>, 2023.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-19 08:37+0000\n"
+"POT-Creation-Date: 2023-07-19 14:48+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: André van Delft <andrevandelft@outlook.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -48,19 +47,59 @@ msgstr "Auteur"
 msgid "Source"
 msgstr "Bron"
 
-#: heidegger_index/templates/lemma_detail.html:72
-msgid "Read full text of"
-msgstr "Lees de volledige tekst van"
+#: heidegger_index/templates/lemma_detail.html:44
+#, python-format
+msgid "Works by %(author_short)s"
+msgstr "Werken van %(author_short)s"
 
-#: heidegger_index/templates/lemma_detail.html:72
-#: heidegger_index/templates/lemma_detail.html:74
-msgid "on"
-msgstr "in de"
+#: heidegger_index/templates/lemma_detail.html:59
+msgid "Related"
+msgstr "Gerelateerd"
+
+#: heidegger_index/templates/lemma_detail.html:69
+#, python-format
+msgid "View %(lemma_value)s on Perseus"
+msgstr "Bekijk %(lemma_value)s op Perseus"
 
 #: heidegger_index/templates/lemma_detail.html:74
-msgid "Read works of"
-msgstr "Lees de werken van"
+#, python-format
+msgid ""
+"Read full text of <em>%(lemma_value)s</em> on <cite>Perseus Digital Library</"
+"cite>"
+msgstr "Lees de volledige tekst van <em>%(lemma_value)s</em> op de <cite>Perseus Digital Library</cite>"
+
+#: heidegger_index/templates/lemma_detail.html:76
+#, python-format
+msgid ""
+"Read works of <em>%(lemma_value)s</em> on <cite>Perseus Digital Library</"
+"cite>"
+msgstr "Lees de volledige tekst van <em>%(lemma_value)s</em> op de <cite>Perseus Digital Library</cite>"
 
 #: heidegger_index/templates/work_detail.html:20
 msgid "Appears in"
 msgstr "Verschenen in"
+
+#: heidegger_index/templates/work_detail.html:24
+msgid "Sections"
+msgstr "Secties"
+
+#: heidegger_index/templates/work_detail.html:29
+msgid "Reference"
+msgstr "Referentie"
+
+#: heidegger_index/templates/work_detail.html:39
+msgid "Index terms"
+msgstr "Indextermen"
+
+#: heidegger_index/templates/work_detail.html:43
+msgid "People mentioned"
+msgstr "Genoemde personen"
+
+#: heidegger_index/templates/work_detail.html:48
+msgid "Works mentioned"
+msgstr "Genoemde werken"
+
+#: heidegger_index/templates/work_detail.html:53
+#, python-format
+msgid "Mentions of <em>%(title)s</em>"
+msgstr "Vermeldingen van <em>%(title)s</em>"
