Switch lemma and display value in reference links to match Obsidian convention

--- a/index/descriptions/NL 2[127].md
+++ b/index/descriptions/NL 2[127].md
@@ -1,1 +1,1 @@
-> Der [[Nihilismus]] steht vor der Thür: woher kommt uns dieser [[unheimlichste|Unheimliches]] aller Gäste?
+> Der [[Nihilismus]] steht vor der Thür: woher kommt uns dieser [[Unheimliches|unheimlichste]] aller Gäste?
