--- a/index/descriptions/DK 22 B53.md
+++ b/index/descriptions/DK 22 B53.md
@@ -1,1 +1,1 @@
-> Auseinandersetzung ist allem ([[Anwesenden|Anwesen]]) zwar Erzeuger (der aufgehen läßt), allem aber (auch) waltender Bewahrer. Sie läßt nämlich die einen als [[Götter]] erscheinen, die anderen als [[Menschen|Mensch]], die einen stellt die her(aus) als Knechte, die anderen aber als Freie. [@EM, p. 66]
+> Auseinandersetzung ist allem ([[Anwesen|Anwesenden]]) zwar Erzeuger (der aufgehen läßt), allem aber (auch) waltender Bewahrer. Sie läßt nämlich die einen als [[Götter]] erscheinen, die anderen als [[Mensch|Menschen]], die einen stellt die her(aus) als Knechte, die anderen aber als Freie. [@EM, p. 66]
