--- a/index/descriptions/DK 22 B93.md
+++ b/index/descriptions/DK 22 B93.md
@@ -2,4 +2,4 @@
 
 > De heer van wie het orakel in Delphi is, zegt niet en verbergt niet, maar geeft een teken. (Heraclitus, _Spreuken_, vert. door Cornelis Verhoeven, p. 29)
 
-> "Der Herr, dessen das Orakel zu Delphi ist, spricht weder aus, noch verbirgt er, sonder gibt ein Zeichen \[be-deutet\]." Hier wird klar: Der Gegenbegriff des λέγειν, des 'zum Worte bringens', ist das κρύπτειν, das Verborgen- und in der Verborgenheit Halten. [@GA 29/30, p. 41]
+> "Der Herr, dessen das Orakel zu Delphi ist, spricht weder aus, noch verbirgt er, sonder gibt ein Zeichen \[be-deutet\]." Hier wird klar: Der Gegenbegriff des [[λέγειν]], des 'zum Worte bringens', ist das [[κρύπτεσθαι|κρύπτειν]], das Verborgen- und in der Verborgenheit Halten. [@GA 29/30, p. 41]
