Add references to Theätet and the Hohlengleichnis

--- a/index/descriptions/DK 22 B123.md
+++ b/index/descriptions/DK 22 B123.md
@@ -6,4 +6,6 @@
 
 > Das Walten der Dinge hat in sich selbst das Streben sich zu verbergen. [@GA 29/30, p. 41]
 
+> Das Walten des Seienden, d. h. das Seiende in seinem Sein, liebt es, sich zu verbergen [@GA 34, p. 13]
+
 > Das Sein liebt es, sich zu verbergen. Was sagt dies? Man hat gemeint und meint, dies sage, das Sein sei schwer zugänglich und es bedürfe großer Anstrengungen, um es aus seinem Versteck herauszuholen und ihm das Sichverbergen gleichsam auszutreiben. Aber das Gegenteil ist die Not: Das Sichverbergen gehört zur Vor-liebe des Seins, d.h. zu dem, worin es sein Wesen festgemacht hat. [@WBPh, p. 298]
