Add translations of Verhoeven to some Heraclitus fragments.

--- a/index/descriptions/DK 22 B108.md
+++ b/index/descriptions/DK 22 B108.md
@@ -1,3 +1,5 @@
+> Van al degenen van wie ik de samenhangende betogen heb vernomen, kom niet één ertoe te erkennen dat 'het wijze' iets is dat van alles onderscheiden is. (Heraclitus, _Spreuken_, vert. door Cornelis Verhoeven, p. 31)
+
 Heidegger vertaalt:
 
 > Wie vieler Menschen Aussprüche ich auch hörte, keiner ist zu dem gelangt, zu erkennen, daß das Weisesein, das σοφόν \[die Philosophie\] etwas ist, was von allem abgetrennt ist. [@GA 29/30, p. 34]
