--- a/index/descriptions/DK 22 B122.md
+++ b/index/descriptions/DK 22 B122.md
@@ -1,3 +1,5 @@
+> dichtbij komen (Heraclitus, _Spreuken_, vert. door Cornelis Verhoeven, p. 33)
+
 > G    Man übersetztst das griechische Wort durch das deutsche »Herangehen«. \[…\]  
 > G    Wörtlich übersetzt besagt es: »Nahegehen«.  
 > L    Wir könnten vielleicht auch denken: »In-die-Nähe-gehen«.  
