--- a/index/descriptions/DK 22 B53.md
+++ b/index/descriptions/DK 22 B53.md
@@ -1,1 +1,3 @@
+> Oorlog is de vader van alles, de koning van alles. Aan de ene groep wijst hij hun plaats toe als goden, aan de anderen als mensen; sommigen maakt hij slaaf, anderen vrij. (Heraclitus, _Spreuken_, vert. door Cornelis Verhoeven, p. 21)
+
 > Auseinandersetzung ist allem ([[Anwesen|Anwesenden]]) zwar Erzeuger (der aufgehen läßt), allem aber (auch) waltender Bewahrer. Sie läßt nämlich die einen als [[Götter]] erscheinen, die anderen als [[Mensch|Menschen]], die einen stellt die her(aus) als Knechte, die anderen aber als Freie. [@EM, p. 66]
